--- a/src/configs/chain_config.mainnet.json
+++ b/src/configs/chain_config.mainnet.json
@@ -1,29 +1,29 @@
 {
-  "title": "Desmos Block Explorer",
-  "network": "desmos-mainnet-1",
-  "icon": "https://raw.githubusercontent.com/forbole/big-dipper-assets/master/desmos/icon.svg?sanitize=true",
+  "title": "MUN Mainnet Block Explorer",
+  "network": "mun-1",
+  "icon": "https://raw.githubusercontent.com/vigorousdeveloper/explorer_assets/main/icon.svg?sanitize=true",
   "logo": {
-    "default": "https://raw.githubusercontent.com/forbole/big-dipper-assets/master/desmos/logo.svg?sanitize=true"
+    "default": "https://raw.githubusercontent.com/vigorousdeveloper/explorer_assets/main/logo.svg?sanitize=true"
   },
   "prefix": {
-    "consensus": "desmosvalcons",
-    "validator": "desmosvaloper",
-    "account": "desmos"
+    "consensus": "munvalcons",
+    "validator": "munvaloper",
+    "account": "mun"
   },
   "genesis": {
-    "time": "2022-07-01T13:05:46.005798414Z",
+    "time": "2023-07-19T08:00:00.127125301Z",
     "height": 1
   },
-  "primaryTokenUnit": "utmun",
-  "votingPowerTokenUnit": "utmun",
+  "primaryTokenUnit": "umun",
+  "votingPowerTokenUnit": "umun",
   "tokenUnits": {
-    "utmun": {
-      "display": "utmun",
+    "umun": {
+      "display": "umun",
       "exponent": 0
     },
-    "tmun": {
-      "display": "tmun",
-      "exponent": 9
+    "mun": {
+      "display": "mun",
+      "exponent": 6
     }
   },
   "extra": {
